# zito

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  changelog  todo
.zed/: debug.json
benches/: data.txt  file_indexing.rs
src/: lib.rs  main.rs  treesitter.rs
